# dl-inference-module

./: .gitignore  CMakeLists.txt  LICENSE  README.md
foo/: CMakeLists.txt
foo/include/: CMakeLists.txt
foo/include/Foo/: CMakeLists.txt
foo/include/Foo/tensorflow/: CMakeLists.txt
foo/include/Foo/tensorflow/c/: CMakeLists.txt
foo/include/Foo/tensorflow/c/eager/: CMakeLists.txt
foo/include/tensorflow/: CMakeLists.txt
foo/include/tensorflow/c/: CMakeLists.txt
foo/include/tensorflow/c/eager/: CMakeLists.txt
foo/src/: CMakeLists.txt  Tensor.cpp
foo/src/Foo/: CMakeLists.txt
include/: DLInference.h  Model.h  Tensor.h
inference/: CMakeLists.txt  README.md
inference/cmake/modules/: FindTensorFlow.cmake
inference/include/: DLInference.h
inference/src/: DLInference.cpp  Model.cpp
module/ensemble/: CMakeLists.txt  main.cpp
module/ensemble/checkpoint/: progress-20-model.ckpt.data-00000-of-00001
modules/: CMakeLists.txt  Main.cpp  cvae.pb
modules/ensemble/: CMakeLists.txt  dcgan.pb
modules/refactored/: CMakeLists.txt  main.cpp
modules/refactored/checkpoint/: params_PbWO4.ckpt.index  progress-20-model.ckpt.index
modules/reflibrary/: Main.cpp
modules/reflibrary/checkpoint/: checkpoint  model.b64.ckpt.index
src/: DLInference.cpp
